--- a/chart.html
+++ b/chart.html
@@ -27,10 +27,10 @@
             <table class="table table-bordered">
                 <thead class="table-dark">
                     <tr>
-                        <th scope="col">colour</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Image</th>
+                        <th scope="col">Truck ID</th>
+                        <th scope="col">Temperature (°C)</th>
+                        <th scope="col">Time</th>
+                        <th scope="col">Reason (If Any)</th>
                     </tr>
                 </thead>
                 <tbody id="table_body">
